# eswc_2026_submission_13

./: .#README.md  .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: README.md  make_graphs.ipynb  open_ai_embedding_similarity.ipynb  structure_mAP_correlation.ipynb
results/: README.md
run_args/: README.md
run_args/onto_pop/0_shot/deepseekr1-distill-llama3-8B/astronomy-ontology/: 2e2ddb82-9f11-4fab-9ba1-27798805d357.json  6a1b73e3-f852-4d0c-b4e7-eb7041085603.json  95e3f7ea-6c5f-486c-b222-b51024dd5110.json  d7a9319b-db24-4add-afdd-c99463a320cc.json
run_args/onto_pop/0_shot/deepseekr1-distill-llama3-8B/case-uco-owl-trafficking/: 1520db7d-bf26-4e9a-9b85-09677db2fee6.json  1b8ca5f2-185e-4dc0-b071-ee0fec83f888.json  7fd5b64c-80fd-43de-a208-71406958378b.json  f17c4add-6dee-43d9-afdc-b74ff9c10a3e.json
run_args/onto_pop/0_shot/deepseekr1-distill-llama3-8B/wines-ontology/: 488936b8-0f78-4c91-8284-47063b5d8221.json  (+3 more)
run_args/onto_pop/0_shot/gpt-4o/: run_args_ranked_retrieval_gpt-4o_test.json
run_args/onto_pop/0_shot/llama3-8B/: run_args_ranked_retrieval_llama-3-7B_test.json
src/eswc_2026_submission_13/: README.md
src/eswc_2026_submission_13/metrics/datasets/: onto_pop.py
src/eswc_2026_submission_13/metrics/results/: onto_pop.py
src/eswc_2026_submission_13/model/hugging_face/: initialize_model.py  predict.py
src/eswc_2026_submission_13/model/open_ai/: predict.py
src/eswc_2026_submission_13/process_data/create_dataset/: create_examples.py  onto_pop.py
src/eswc_2026_submission_13/task_map/: onto_pop.py
(+2704 files in other folders)
